--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -1,8 +1,8 @@
 .FormModal {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
-  z-index: 20;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,6 +12,7 @@
   /* Adjust the alpha value for transparency */
   backdrop-filter: blur(10px);
   /* Adjust the blur radius as needed */
+  margin-top: -150px;
   h1 {
     margin-top: 0;
     font-size: 20px;
@@ -22,6 +23,10 @@
   }
 
   section {
+    max-width: 1000px;
+    max-height: 900px;
+    position: absolute;
+    top: 20vh;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     background-color: white;
@@ -35,15 +40,21 @@
 
     p {
       font-size: 25px;
-
       width: 60vw;
       height: 10px;
       margin-left: 60px;
       color: black;
+      max-width: 1000px;
+      max-height: 900px;
+    }
+    p:hover {
+      cursor: pointer;
     }
 
     .inputField {
       color: black;
+      max-width: 900px;
+      max-height: 900px;
       height: 60vh;
 
       width: 30vw;
@@ -51,6 +62,7 @@
       h3 {
         width: 30vw;
         border-radius: 7px;
+        max-width: 900px;
         border-color: white;
       }
 
@@ -62,20 +74,23 @@
         background-color: white;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
           rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
+        max-width: 900px;
       }
     }
 
-    button {
+    .button {
+      margin-top: 10px;
       color: black;
       border-radius: 7px;
-      margin-top: 10px;
-      background-color: white;
+      color: white;
       border-color: white;
-      width: 60px;
-      height: 20px;
+      width: 70px;
+      height: 30px;
+      background-color: rgb(237, 119, 49);
     }
 
-    button:hover {
+    .button:hover {
       color: white;
       background-color: rgb(84, 118, 228);
       cursor: pointer;
