--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -295,8 +295,9 @@
       margin-top: 10px;
     }
     #profilePic {
+      border: solid 1px rgb(100, 100, 100);
       margin-top: 10px;
-      width: 80px;
+      width: 90px;
       height: 80px;
       border-radius: 100%;
     }
