--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -43,8 +43,8 @@
         margin-right: 1vw;
       }
       h5:hover {
-        background-color: rgb(180, 217, 247);
         color: white;
+        background-color: rgb(191, 63, 27);
         cursor: pointer;
       }
     }
@@ -53,6 +53,8 @@
       height: 3vh;
       border-radius: 7px;
       display: flex;
+
+      overflow-x: scroll;
       align-items: center;
       justify-content: flex-start;
       box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
@@ -61,7 +63,6 @@
       border: solid 1px white;
       h4 {
         border-radius: 7px;
-        width: 10vw;
         height: 2.5vh;
         background-color: black;
         margin-left: 2.5px;
@@ -70,6 +71,7 @@
         justify-content: center;
         font-size: 12px;
         overflow: hidden;
+        min-width: 100px;
       }
       h4:hover {
         cursor: pointer;
@@ -86,7 +88,7 @@
       p {
         margin: 0;
         width: 60vw;
-        color: rgb(180, 217, 247);
+        color: rgb(191, 63, 27);
         font-size: 25px;
         padding-left: 30px;
       }
