--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -105,7 +105,7 @@
     align-items: center;
     flex-direction: column;
 
-    .likes {
+    .interactions {
       width: 100%;
       display: flex;
       justify-content: flex-start;
